# 42-Fly-in

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/components/: button.py  dialog.py  map_hud.py  map_renderer.py  text.py  visual_drone.py  visual_hub.py
src/core/: graph.py  map_manager.py  pathfinding.py  simulation.py
src/utils/: errors.py  get_path.py  logger.py  map_utils.py  models.py  parser.py
src/views/: difficulty_view.py  error_view.py  level_view.py  map_view.py  menu_view.py
tests/: test_parsing.py
