[project]
name = "fly-in"
version = "0.1.0"
description = "Design an efficient drone routing system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade>=3.3.3",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
]

[tool.mypy]
mypy_path = "src"
strict = true
explicit_package_bases = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "src"
]

[tool.ruff]
# Set the maximum line length to 80 characters.
line-length = 80

[tool.ruff.lint]
# Enable specific rule sets. 
# "E" and "W" are for pycodestyle (equivalent to Flake8 base rules)
# "F" is for Pyflakes
select = ["E", "F", "W"]

[tool.ruff.format]
# Standardize formatting
quote-style = "double"
indent-style = "space"